--- a/Plantilla_Tareas.ipynb
+++ b/Plantilla_Tareas.ipynb
@@ -9,11 +9,11 @@
     "    \n",
     "### <font color='navy'> Simulación de procesos financieros. \n",
     "\n",
-    "**Nombres:** Emiliano Mena González y .\n",
+    "**Nombres:** Emiliano Mena González & Gustavo Adrián Herrera Barragán\n",
     "\n",
     "**Fecha:** 23 de febrero del 2023.\n",
     "\n",
-    "**Expediente** : 728407 y .\n",
+    "**Expediente** : 728407 & 734546.\n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
     "**Link Github**: https://github.com/EmilianoMena/ProyectoConjunto_EMena_GAHerrera\n",
@@ -25,8 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Enunciado de tarea (Transcibirlo)\n",
-    "> Descripción de la tarea"
+    "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
    ]
   },
   {
@@ -43,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 1"
+    "#### Código de solución estudiante 1"
    ]
   },
   {
@@ -54,7 +53,7 @@
     {
      "data": {
       "text/plain": [
-       "67"
+       "57"
       ]
      },
      "execution_count": 2,
@@ -82,20 +81,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 2"
+    "#### Código de solución estudiante 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-4-17323e7c54a4>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-17323e7c54a4>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    .\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Código de solución estudiante 2\n",
     ".\n",
     ".\n",
     ".\n",
     ".\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
    ]
   },
   {
@@ -110,12 +125,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 1"
+    "#### Código de solución estudiante 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -124,7 +139,7 @@
        "26"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 2"
+    "#### Código de solución estudiante 2"
    ]
   },
   {
@@ -159,6 +174,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ejercicio 3: \n",
     ">3. Remove all of the vowels in a string [make a list of the non-vowels]."
    ]
@@ -167,12 +189,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 1"
+    "#### Código de solución estudiante 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +203,7 @@
        "'vrbl =  rlcónn  rqr,  pr btnr  l  vlr  d n  crt  térmn,  l cncmnt d ls ds ntrrs.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 2"
+    "#### Código de solución estudiante 2"
    ]
   },
   {
@@ -215,6 +237,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ejercicio 4: \n",
     ">4. Find all of the words in a string that are less than 4 letters."
    ]
@@ -223,12 +252,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 1"
+    "#### Código de solución estudiante 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +266,7 @@
        "'variable relaciónn requiere, obtener valor cierto término, conocimiento anteriores.'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 2"
+    "#### Código de solución estudiante 2"
    ]
   },
   {
@@ -265,6 +294,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -278,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 1"
+    "#### Código de solución estudiante 1"
    ]
   },
   {
@@ -292,7 +328,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 2"
+    "#### Código de solución estudiante 2"
    ]
   },
   {
@@ -301,6 +337,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -314,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 1"
+    "#### Código de solución estudiante 1"
    ]
   },
   {
@@ -328,7 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Código de solución estudiante 2"
+    "#### Código de solución estudiante 2"
    ]
   },
   {
@@ -342,14 +385,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Respuesta planteada en el ejercicio usando (markdown)\n",
-    " La respuesta es ........."
+    "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<script>\n",
+    "  $(document).ready(function(){\n",
+    "    $('div.prompt').hide();\n",
+    "    $('div.back-to-top').hide();\n",
+    "    $('nav#menubar').hide();\n",
+    "    $('.breadcrumb').hide();\n",
+    "    $('.hidden-print').hide();\n",
+    "  });\n",
+    "</script>\n",
+    "\n",
+    "<footer id=\"attribution\" style=\"float:right; color:#808080; background:#fff;\">\n",
+    "Creado con Jupyter por: Gustavo Adrián Herrera Barragán & Julia María Dominguez Russell.\n",
+    "</footer>"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -363,7 +424,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
