--- a/Plantilla_Tareas.ipynb
+++ b/Plantilla_Tareas.ipynb
@@ -403,7 +403,7 @@
     "</script>\n",
     "\n",
     "<footer id=\"attribution\" style=\"float:right; color:#808080; background:#fff;\">\n",
-    "Creado con Jupyter por: Gustavo Adrián Herrera Barragán & Julia María Dominguez Russell.\n",
+    "Creado con Jupyter por: Gustavo Adrián Herrera Barragán & Emiliano Mena González.\n",
     "</footer>"
    ]
   }
