--- a/Plantilla_Tareas.ipynb
+++ b/Plantilla_Tareas.ipynb
@@ -14,6 +14,7 @@
     "**Fecha:** 23 de febrero del 2023.\n",
     "\n",
     "**Expediente** : 728407 & 734546.\n",
+    "    \n",
     "**Profesor:** Oscar David Jaramillo Zuluaga.\n",
     "    \n",
     "**Link Github**: https://github.com/EmilianoMena/ProyectoConjunto_EMena_GAHerrera\n",
@@ -410,7 +411,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -424,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
