--- a/ProyectoConjunto_EMena_GAHerrera.ipynb
+++ b/ProyectoConjunto_EMena_GAHerrera.ipynb
@@ -48,16 +48,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "88"
+       "[0, 1, 2, 9, 44, 265, 1854, 14833, 133496]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,15 +66,17 @@
     "# Librerias\n",
     "import numpy as np\n",
     "# Función\n",
-    "def func(n,D1,D2):\n",
-    "    func = (n-1)*D1+(n-1)*D2\n",
-    "    return func\n",
+    "def D(n):\n",
+    "    if n==1:\n",
+    "        return 0\n",
+    "    if n==2:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return (n-1)*D(n-1)+(n-1)*D(n-2)\n",
     "# Variables\n",
-    "n = np.random.randint(4,100)\n",
-    "D1 = 0\n",
-    "D2 = 1\n",
+    "n = np.arange(1,10,1)\n",
     "# Solución\n",
-    "sol1 = func(n,D1,D2)\n",
+    "sol1 = list(map(D,n))\n",
     "sol1"
    ]
   },
@@ -87,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +97,7 @@
      "evalue": "invalid syntax (2925374305.py, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\emili\\AppData\\Local\\Temp\\ipykernel_16420\\2925374305.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    .\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\emili\\AppData\\Local\\Temp\\ipykernel_13572\\2925374305.py\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    .\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -131,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +142,7 @@
        "26"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +206,7 @@
        "'vrbl =  rlcónn  rqr,  pr btnr  l  vlr  d n  crt  térmn,  l cncmnt d ls ds ntrrs.'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,16 +260,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'variable relaciónn requiere, obtener valor cierto término, conocimiento anteriores.'"
+       "'= el de un el de los dos'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +277,7 @@
    "source": [
     "# Función\n",
     "def remove_words(string):\n",
-    "    result = ' '.join([word for word in string.split() if len(word)>4])\n",
+    "    result = ' '.join([word for word in string.split() if len(word)<4])\n",
     "    return result\n",
     "# Solución\n",
     "sol4 = remove_words(string)\n",
