--- a/ProyectoConjunto_EMena_GAHerrera.ipynb
+++ b/ProyectoConjunto_EMena_GAHerrera.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "26"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
        "'vrbl =  rlcónn  rqr,  pr btnr  l  vlr  d n  crt  térmn,  l cncmnt d ls ds ntrrs.'"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
        "'= el de un el de los dos'"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
        "['=', 'el', 'de', 'un', 'el', 'de', 'los', 'dos']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
        " 'anteriores.': 11}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        " 'anteriores.': 11}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1261,7 +1261,7 @@
        " 1000]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1270,7 +1270,7 @@
     "# Proceso\n",
     "rango_numeros = np.arange(start=1, stop=1001, step=1)\n",
     "divisores = np.arange(start=2, stop=10, step=1)\n",
-    "\n",
+    "# Solución\n",
     "sol6 = [n for n in rango_numeros if any([ n % d == 0 for d in divisores])]\n",
     "sol6"
    ]
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2064,7 +2064,7 @@
        " 1000]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2080,6 +2080,65 @@
    "source": [
     "–––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––––"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio 7: \n",
+    ">7.Como ejemplo simple de una simulación de Monte Carlo, considere calcular la probabilidad de una suma particular del lanzamiento de tres dados (cada dado tiene valores del uno al seis). Además cada dado tiene las siguientes carácterísticas: el primer dado no está cargado (distribución uniforme todos son equiprobables); el segundo y tercer dado están cargados basados en una distribución binomial con parámetros (`n=5, p=0.5` y `n=5, p=0.2`). Calcule la probabilidad de que la suma resultante sea 7, 14 o 18. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Código de solución estudiante 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de que la suma resultante sea 7, 14 o 18 es de 16.669999999999998%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función que tire los tres dados y los sume, regresa True si la suma es igual a 7, 14 o 18 y regresa False si es otro numero.\n",
+    "def suma_dados():\n",
+    "    dado1 = np.random.randint(1,7)\n",
+    "    dado2 = np.random.binomial(n=5, p=0.5)\n",
+    "    dado3 = np.random.binomial(n=5, p=0.2)\n",
+    "    suma = dado1 + dado2 + dado3\n",
+    "    if suma == 7 or suma == 14 or suma == 18:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "# Simular el lanzamiento de los dados N veces\n",
+    "N = 10000\n",
+    "contador_ganar = sum([suma_dados() for i in range(N)])\n",
+    "print(f'La probabilidad de que la suma resultante sea 7, 14 o 18 es de {contador_ganar/N*100}%')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Código de solución estudiante 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -2103,7 +2162,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2117,7 +2176,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
