--- a/ProyectoConjunto_EMena_GAHerrera.ipynb
+++ b/ProyectoConjunto_EMena_GAHerrera.ipynb
@@ -2098,14 +2098,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La probabilidad de que la suma resultante sea 7, 14 o 18 es de 16.669999999999998%\n"
+      "La probabilidad de que la suma resultante sea 7, 14 o 18 es de 16.2%\n"
      ]
     }
    ],
@@ -2135,10 +2135,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La probabilidad de que la suma resultante sea 7, 14 o 18 es de 16.25%\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Función que tire los tres dados y los sume, regresa True si la suma es igual a 7, 14 o 18 y regresa False si es otro numero.\n",
+    "def suma_dados():\n",
+    "    dado1 = np.random.randint(1,7)\n",
+    "    dado2 = np.random.binomial(n=5, p=0.5)\n",
+    "    dado3 = np.random.binomial(n=5, p=0.2)\n",
+    "    suma = dado1 + dado2 + dado3\n",
+    "    if suma == 7 or suma == 14 or suma == 18:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "# Simular el lanzamiento de los dados N veces\n",
+    "N = 10000\n",
+    "contador_ganar = sum([suma_dados() for i in range(N)])\n",
+    "print(f'La probabilidad de que la suma resultante sea 7, 14 o 18 es de {contador_ganar/N*100}%')"
+   ]
   },
   {
    "cell_type": "markdown",
